synopsis:     "GuideDAO Coq course"
description:  "GuideDAO Coq course"
name:         "guidedao-coq"
opam-version: "2.0"
maintainer:   "andruiman@gmail.com"
authors:      "Pruvendo Team"
homepage:     "git://git@github.com:andruiman/guidedao-coq.git"
dev-repo:     "git://git@github.com:andruiman/guidedao-coq.git"
bug-reports:  "git://git@github.com:andruiman/guidedao-coq.git"
doc:          "https://coq.inria.fr"

license:      "MIT"

depends: [
  "coq"           { >= "8.16.0" }
  "dune"          { >= "2.8.0"  }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
